--- a/action.yml
+++ b/action.yml
@@ -34,13 +34,11 @@ runs:
       shell: bash
       working-directory: ${{ inputs.layer-directory }}
       run: |
-        if [ "${{ inputs.runtime }}" -eq "python" ]
-        then
+        if [ "${{ inputs.runtime }}" = "python" ]; then
           echo "Building Python Layer"
           mkdir -p python && pip install -r requirements.txt -t ./python
           zip -r lambda_layer.zip ./python
-        elif [ "${{ inputs.runtime }}" -eq "node" ]
-        then
+        elif [ "${{ inputs.runtime }}" = "node" ]; then
           echo "Building Node Layer"
           mkdir -p nodejs/node_modules && npm install -r requirements.txt -t ./nodejs/node_modules
           zip -r lambda_layer.zip ./nodejs/node_modules
