--- a/action.yml
+++ b/action.yml
@@ -61,9 +61,8 @@ runs:
         aws s3 cp ./lambda_layer.zip s3://${{ inputs.bucketname }}/${{ inputs.prefix-folder-path }}/lambda_layer.zip
         response=$(aws lambda publish-layer-version --layer-name ${{ inputs.layer-name }} \
         --description "${{ inputs.layer-name }} Layer" \
-        --content S3Bucket=${{ inputs.bucketname }},S3Key=${{ inputs.prefix-folder-path }}/lambda_layer.zip
+        --content S3Bucket=${{ inputs.bucketname }},S3Key=${{ inputs.prefix-folder-path }}/lambda_layer.zip)
 
-        layer_version=$(echo $response | jq -r '.Version')
         echo "::set-output name=layer_version::$(echo $response | jq -r '.Version')"
         echo "::set-output name=layer_arn::$(echo $response | jq -r '.LayerArn')"
         echo "::set-output name=layer_name::${{ inputs.layer-name }}"
