--- a/action.yml
+++ b/action.yml
@@ -75,10 +75,4 @@ runs:
 
     - name: Lambda Layer Permission
       shell: bash
-      run: |
-        aws lambda add-layer-version-permission \
-          --layer-name ${{ steps.build-layer.outputs.layer_name }} \
-          --statement-id GrantAccountAccess-$(date +%s) \
-          --action lambda:GetLayerVersion \
-          --principal ${{ inputs.principal }} \
-          --version-number ${{ steps.build-layer.outputs.layer_version }}
+      run: aws lambda add-layer-version-permission --layer-name ${{ steps.build-layer.outputs.layer_name }} --statement-id "GrantAccountAccess_$(date +%s)" --action lambda:GetLayerVersion --principal ${{ inputs.principal }} --version-number ${{ steps.build-layer.outputs.layer_version }}
