--- a/action.yml
+++ b/action.yml
@@ -78,8 +78,9 @@ runs:
       run: |
         echo "$(aws --version)"
         DATE_SUFFIX="$(date +%s)"
-        aws lambda add-layer-version-permission --layer-name ${{ steps.build-layer.outputs.layer_name }} \
+        aws lambda add-layer-version-permission --layer-name "${{ steps.build-layer.outputs.layer_name }}" \
         --statement-id "GrantAccountAccess-${DATE_SUFFIX}" \
         --action lambda:GetLayerVersion \
-        --principal ${{ inputs.principal }} \
-        --version-number ${{ steps.build-layer.outputs.layer_version }}
+        --principal "${{ inputs.principal }}" \
+        --version-number "${{ steps.build-layer.outputs.layer_version }}"
+
