adding some documentation links

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,13 @@
 name: AWS Lambda Layer Builder
 description: Creates an AWS Lambda Layer and uploads layer to a S3 bucket.  Add permisions to the Lambda Layer to grant access to other accounts. 
 
+# Including library dependencies in a layer
+# https://docs.aws.amazon.com/lambda/latest/dg/configuration-layers.html#configuration-layers-path
+
+# Lambda Runtimes
+# https://docs.aws.amazon.com/lambda/latest/dg/lambda-runtimes.html
+
+
 branding:
   icon: layers
   color: orange
