--- a/action.yml
+++ b/action.yml
@@ -69,11 +69,12 @@ runs:
       run: |
         DATE=$(date +"%d_%m_%Y")
         FOLDER_PATH="${{ inputs.prefix-folder-path }}"
-        FORMATTED_LAYER_NAME="${{ inputs.layer-name }}-${DATE}-${RANDOM}"
-        aws s3 cp ./lambda_layer.zip s3://${{ inputs.bucketname }}/${{ inputs.prefix-folder-path }}/${FORMATTED_LAYER_NAME}.zip
+        FORMATTED_LAYER_NAME="${{ inputs.layer-name }}-${DATE}"
+        FORMATTED_ZIP="${FORMATTED_LAYER_NAME}-${RANDOM}.zip"
+        aws s3 cp ./lambda_layer.zip s3://${{ inputs.bucketname }}/${{ inputs.prefix-folder-path }}/${FORMATTED_ZIP}
         RESPONSE=$(aws lambda publish-layer-version --layer-name ${FORMATTED_LAYER_NAME} \
         --description "${{ inputs.layer-name }} Layer" \
-        --content S3Bucket=${{ inputs.bucketname }},S3Key=${{ inputs.prefix-folder-path }}/${FORMATTED_LAYER_NAME}.zip)
+        --content S3Bucket=${{ inputs.bucketname }},S3Key=${{ inputs.prefix-folder-path }}/${FORMATTED_ZIP})
 
         echo "::set-output name=layer_version::$(echo $RESPONSE | jq -r '.Version')"
         echo "::set-output name=layer_arn::$(echo $RESPONSE | jq -r '.LayerArn')"
