--- a/action.yml
+++ b/action.yml
@@ -103,7 +103,7 @@ runs:
         if [ ${ADDITIONAL_LAYER_REGIONS} ]; then
           for r in $(echo $regions | sed "s/,/ /g")
           do
-            echo "Region: ${r}"
+            echo "Deploying Layer to Region: ${r}"
             RESPONSE=$(aws lambda publish-layer-version --layer-name ${FORMATTED_LAYER_NAME} \
             --description "${{ inputs.layer-name }} Layer" \
             --content S3Bucket=${{ inputs.bucketname }},S3Key=${{ inputs.prefix-folder-path }}/${FORMATTED_ZIP} --region ${r})
